--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@flus38765/aither-build",
+  "name": "@aithercore/aither-build",
   "version": "0.9.0",
   "description": "A helper for common tasks to build bitcore-dash modules'",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/flus38765/aither-build"
+    "url": "git://github.com/aithercore/aither-build"
   },
   "keywords": [
     "bitcore"
@@ -37,9 +37,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dashpay/bitcore-build-dash/issues"
+    "url": "https://github.com/aithercore/aither-build/issues"
   },
-  "homepage": "https://github.com/dashpay/bitcore-build-dash",
+  "homepage": "https://github.com/aithercore/aither-build",
   "dependencies": {
     "brfs": "^1.4.3",
     "browserify": "^13.1.1",
