--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@aithercore/bitcore-build-aither",
+  "name": "@aithercore/aither-build",
   "version": "0.9.0",
-  "description": "A helper for common tasks to build bitcore-dash modules'",
+  "description": "A helper for common tasks to build aithercore modules'",
   "main": "index.js",
   "scripts": {
     "test": "gulp test"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/aithercore/bitcore-build-aither"
+    "url": "git://github.com/aithercore/aither-build"
   },
   "keywords": [
     "bitcore"
@@ -37,9 +37,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/aithercore/bitcore-build-aither/issues"
+    "url": "https://github.com/aithercore/aither-build/issues"
   },
-  "homepage": "https://github.com/aithercore/bitcore-build-aither",
+  "homepage": "https://github.com/aithercore/aither-build",
   "dependencies": {
     "brfs": "^1.4.3",
     "browserify": "^13.1.1",
